--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <div class="container">
             <div >
-                <h1 class = "header_text">Will you be my Valentine Drishti?</h1>
+                <h1 class = "header_text">Will you be my Valentine MOM?</h1>
                 <h1 class = "header_text">xoxoxoxoxoxoxoxoxoxoxo</h1>
             </div>
             <div class="gif_container">
